tests/NormalTests/paczka1/small_fuzzy/83027316.err
Error in line 2: C8FVxHRBU S124 32,7
Error in line 4: C8FVxHRBU A956 52,4
Error in line 10: FZR5R0 S124 17,2
